# EVM_IndustrialMachinery_JetsonNano

./: CMakeLists.txt  EVM_run.sh  LICENSE  README.md  evm_test.sh
Results/: machine1-butter-from-4.000000-to-6.200000-alpha-100.000000-lambda_c-90.000000-chromAtn-1.000000.avi
include/: ellf.h  im_conv.h  processing_functions.h
logs/: log_machineEVM.txt
results/: machine2EVM.avi
src/: cmplx.c  const.c  ellf.c  im_conv.cpp  main.cpp  mtherr.c  processing_functions.cpp  tracker.py  video_detection.py
